--- a/jacoco-maven-plugin.test/src/it/no-debug/pom.xml
+++ b/jacoco-maven-plugin.test/src/it/no-debug/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>jacoco</groupId>
-  <artifactId>attach-agent</artifactId>
+  <artifactId>report</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <dependencies>
@@ -19,12 +19,19 @@
     <plugins>
       <plugin>
         <groupId>@project.groupId@</groupId>
-        <artifactId>@project.artifactId@</artifactId>
+        <artifactId>jacoco-maven-plugin</artifactId>
         <version>@project.version@</version>
         <executions>
           <execution>
             <goals>
               <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>report</goal>
             </goals>
           </execution>
         </executions>
@@ -36,6 +43,8 @@
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
+          <debug>true</debug>
+          <debuglevel>none</debuglevel>
         </configuration>
       </plugin>
       <plugin>
