Trac #25: Improve integration tests for jacoco-maven-pluGin.

--- a/jacoco-maven-plugin.test/pom.xml
+++ b/jacoco-maven-plugin.test/pom.xml
@@ -37,6 +37,7 @@
               <goal>prepare-agent</goal>
             </goals>
             <configuration>
+              <!-- Enable recording of coverage during execution of maven-invoker-plugin -->
               <propertyName>invoker.mavenOpts</propertyName>
             </configuration>
           </execution>
