--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -374,6 +374,11 @@
           <artifactId>animal-sniffer-maven-plugin</artifactId>
           <version>1.6</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>1.5</version>
+        </plugin>
         <!-- Third-party plugins -->
         <plugin>
           <groupId>org.codehaus.groovy.maven</groupId>
