--- a/jacoco-maven-plugin.test/it/it-multi-module/skip-child/pom.xml
+++ b/jacoco-maven-plugin.test/it/it-multi-module/skip-child/pom.xml
@@ -15,38 +15,13 @@
 
   <parent>
     <groupId>jacoco</groupId>
-    <artifactId>setup-parent</artifactId>
+    <artifactId>it-multi-module</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>it-multi-module</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>skip-child</artifactId>
 
-  <modules>
-    <module>child</module>
-    <module>skip-child</module>
-  </modules>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>@project.groupId@</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>report</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+  <properties>
+    <jacoco.skip>true</jacoco.skip>
+  </properties>
 </project>
