Disable signing JAR files, because not required for the moment

--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -682,17 +682,20 @@
             <inherited>false</inherited>
             <executions>
               <execution>
-                <id>enforce-sign</id>
+                <id>enforce-release-rules</id>
                 <phase>verify</phase>
                 <goals>
                   <goal>enforce</goal>
                 </goals>
                 <configuration>
                   <rules>
+                    <!--
                     <requireActiveProfile>
                       <message>You must sign JARs during release.</message>
                       <profiles>sign</profiles>
                     </requireActiveProfile>
+                    -->
+                    <requireReleaseVersion/>
                   </rules>
                 </configuration>
               </execution>
