Trac #134: Add check for license header to Maven build

--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -530,6 +530,43 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>check-license-header</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <fileset dir="${basedir}" includes="**/*.java,**/*.xml" excludes="target/**" id="missinglicense.fileset">
+                  <not>
+                    <and>
+                      <contains text="Copyright (c) 2009, 2011 Mountainminds GmbH &amp; Co. KG and Contributors"/>
+                      <contains text="All rights reserved. This program and the accompanying materials"/>
+                      <contains text="are made available under the terms of the Eclipse Public License v1.0"/>
+                      <contains text="which accompanies this distribution, and is available at"/>
+                      <contains text="http://www.eclipse.org/legal/epl-v10.html"/>
+                    </and>
+                  </not>
+                </fileset>
+                <pathconvert property="missing" refid="missinglicense.fileset"/>
+                <fail message="Invalid license info in: ${missing}">
+                  <condition>
+                    <not>
+                      <equals arg1="${missing}" arg2=""/>
+                    </not>
+                  </condition>
+                </fail>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
